-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

1/17/14
    - Added Dan Molzahn's SDP_PF package, a set of applications of
      a semidefinite programming relaxation of the power flow
      equations, to the directory 'extras/sdp_pf'.

1/16/14
    - Added 'status' option for 2nd argument to toggle_reserves()
      toggle_dcline() and toggle_iflims() as a convenient way to
      check the enabled/ disabled status of these sets of callback
      functions.
    - Removed extras/cpf since CPF is now part of the core.
    - Added support for Dan Molzahn's SDP_PF package (coming soon).

1/15/14
    - Modified handling of options for optional packages, added:
        mpoption_info_cplex()
        mpoption_info_fmincon()
        mpoption_info_gurobi()
        mpoption_info_ipopt()
        mpoption_info_knitro()
        mpoption_info_mosek()

1/8/14
    - Updates to qps_cplex() and cplex_options() to fix verbose
      display issues with CPLEX 12.6.

1/3/14
    - Added persistent variable to improve performance of have_fcn().
    - Added support for Knitro v9.0.0, including new 'knitromatlab'
      and 'ktrlink' options to have_fcn(), to determine which Knitro
      interfaces are available.

12/10/13
    - New MATPOWER options implementation based on options struct
      instead of options vector.
      INCOMPATIBLE CHANGE: In results struct returned by an OPF, the
      value of results.raw.output.alg is now a string, not an old-style
      numeric alg code.
    - Gurobi now takes precendence over MOSEK when default solver
      is selected for DC OPFs or qps_matpower().

12/4/13
    - Corrected error in Figure 6-5 "Total Cost Function for Negative